# AfterEffect_Android

./: .gitignore  gradlew  settings.gradle
aftereffect/: CMakeLists.txt  build.gradle
aftereffect/libs/fdk-aac-0.1.5/: Android.mk
aftereffect/src/androidTest/java/com/eyedog/aftereffect/: ExampleInstrumentedTest.java
aftereffect/src/main/: AndroidManifest.xml
aftereffect/src/main/assets/shader/base/: fragment_gaussian_pass.glsl  fragment_image_input.glsl  fragment_imagecenter_input.glsl  fragment_sticker.glsl  fragment_swirl.glsl  vertex_imagecenter_input.glsl  vertex_video_input.glsl
aftereffect/src/main/cpp/: AacEncode.cpp  AudioDecoder.cpp  AudioDecoder.h  AudioEncoder.cpp  AudioEncoder.h  AudioFFMixer.cpp  AudioFFMixer.h  AudioMix.cpp  AudioMixer.cpp  AudioMixer.h  AudioTranscoder.cpp  AudioTranscoder.h  BaseProgresser.cpp  BaseProgresser.h  JniAudioDecode.cpp  JniAudioMix.cpp  JniTest.cpp  VideoClip.cpp
aftereffect/src/main/cpp/include/: AacEncode.h  AudioMix.h  JniAudioDecode.h  JniAudioMix.h  JniBase.h  JniTest.h  Log.h  VideoClip.h
aftereffect/src/main/java/com/eyedog/aftereffect/: JniTest.java  VideoClipJni.java
aftereffect/src/main/java/com/eyedog/aftereffect/audio/: AudioDecoder.java  AudioMixer.java
aftereffect/src/main/java/com/eyedog/aftereffect/camera/: CameraDev.java  CameraHandler.java  CameraInstance.java  CameraOpenCallback.java  CameraView.java  TakePictureCallback.java
aftereffect/src/main/java/com/eyedog/aftereffect/constract/: ICamera.java  ICameraPreview.java
aftereffect/src/main/java/com/eyedog/aftereffect/filters/: GLImageCenterFilter.java  GLImageFilter.java  GLImageGaussPassFilter.java  GLImageGaussianBlurFilter.java  GLImageInputFilter.java  GLImageOESInputFilter.java  SpStickerFilter.java  SpSwirlFilter.java  SpVideoInputFilter.java  StickerFilter.java
aftereffect/src/main/java/com/eyedog/aftereffect/gles/: Drawable2d.java  EglCore.java  EglSurfaceBase.java  FullFrameRect.java  GeneratedTexture.java  GlUtil.java  OffscreenSurface.java  ProgressUpdater.java  Texture2dProgram.java  WindowSurface.java
aftereffect/src/main/java/com/eyedog/aftereffect/player/: BaseGLSurfaceView.java  BaseRenderer.java  CameraGLSurfaceView.java  CameraRenderer.java  ImageGLSurfaceView.java  ImageRenderer.java  OesRenderer.java  VideoGLSurfaceView.java  VideoRenderer.java  ZoomSurfaceView.java
aftereffect/src/main/java/com/eyedog/aftereffect/utils/: CameraSizeUtils.java  ImageUtils.java  OpenGLUtils.java  Rotation.java  TextureRotationUtils.java  VideoUtils.java
aftereffect/src/main/res/values/: strings.xml
aftereffect/src/test/java/com/eyedog/aftereffect/: ExampleUnitTest.java
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: bgm_loading.svga  bgm_monitor.svga  loading_echo.svga  loading_snap.svga  loading_snap_old.svga  (+1 more)
basic/: build.gradle
basic/src/main/: AndroidManifest.xml
widgets/: build.gradle
widgets/src/main/: AndroidManifest.xml
(+114 files in other folders)
